Bug 275518 - SVM: Rendering of text in the embedded ppt in the attached ODT file is not proper (libsvm in vectorshape renders title 2 times)
Summary: SVM: Rendering of text in the embedded ppt in the attached ODT file is not pr...
Status: VERIFIED FIXED
Alias: None
Product: calligracommon
Classification: Applications
Component: flake-plugins (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-13 09:22 UTC by swathi
Modified: 2011-07-13 11:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test data (26.27 KB, application/vnd.oasis.opendocument.text)
2011-06-13 09:22 UTC, swathi
Details
Screenshot in Open Office (124.68 KB, image/png)
2011-06-13 09:23 UTC, swathi
Details
Screenshot in Latest calligra Words (179.61 KB, image/png)
2011-06-13 09:24 UTC, swathi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description swathi 2011-06-13 09:22:45 UTC
Created attachment 60949 [details]
Test data

Version: git checkout 8288143b7c1f9f9005209b55b651875219b0e9d6
        (Using KDE 4.5.5)                
     OS: Kubuntu 10.10
Test data is in ODT which has embedded ppt in it.
Open the same document in Calligra Words.
 
Expected outcome:
Text in the embedded ppt should be displayed properly.

Actual outcome:
Observe the text “Importance of Graphs and Tables in General”,it is displaying twice in the calligra words.
Please check the screenshots attached.
Frequency:
Always.
Comment 1 swathi 2011-06-13 09:23:46 UTC
Created attachment 60950 [details]
Screenshot in Open Office
Comment 2 swathi 2011-06-13 09:24:15 UTC
Created attachment 60951 [details]
Screenshot in Latest calligra Words
Comment 3 Inge Wallin 2011-07-03 15:56:39 UTC
Ok, I'll check it out.
Comment 4 Inge Wallin 2011-07-06 17:29:45 UTC
Git commit 0808562a5c3eee300d150e7e028adbba9d572223 by Inge Wallin.
Committed on 06/07/2011 at 19:27.
Pushed by ingwa into branch 'master'.

SVM: Implement more of the TEXTARRAY action.

This fixes Bug 275518: SVM: Rendering of text in the embedded ppt in
           the attached ODT file is not proper (libsvm in vectorshape
           renders title 2 times)

BUG: 275518

M  +7    -5    plugins/vectorshape/libsvm/SPEC     
M  +3    -1    plugins/vectorshape/libsvm/SvmAbstractBackend.h     
M  +11   -3    plugins/vectorshape/libsvm/SvmPainterBackend.cpp     
M  +3    -1    plugins/vectorshape/libsvm/SvmPainterBackend.h     
M  +35   -3    plugins/vectorshape/libsvm/SvmParser.cpp     

http://commits.kde.org/calligra/0808562a5c3eee300d150e7e028adbba9d572223
Comment 5 swathi 2011-07-13 11:49:31 UTC
Verified in 0a3741ba8dceae49bab1944cae45367fb8e87dce.