SVM: Implement more of the TEXTARRAY action.

This fixes Bug 275518: SVM: Rendering of text in the embedded ppt in
           the attached ODT file is not proper (libsvm in vectorshape
           renders title 2 times)

BUG: 275518